data/derived/sp14/progs/unify/prog4647.ml.out
Characters 131-139:
  let seen' = if List.mem h seen then [h]@seen in
                                      ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
